<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/history"
            android:title="@string/menu_history"
            android:icon="@drawable/ic_history_24"/>

        <item android:id="@+id/change"
            android:title="@string/menu_change"
            android:icon="@drawable/ic_person_24"/>

        <item android:id="@+id/setting"
            android:title="@string/menu_setting"
            android:icon="@drawable/ic_setting"/>

        <item android:id="@+id/term"
            android:title="@string/menu_term"
            android:icon="@drawable/ic_security_24"/>

        <item android:id="@+id/help"
            android:title="@string/menu_help"
            android:icon="@drawable/ic_help_24"/>

        <item android:id="@+id/about"
            android:title="@string/menu_about"
            android:icon="@drawable/ic_about_us_24"/>

        <item android:id="@+id/logout"
            android:title="@string/menu_logout"
            android:icon="@drawable/ic_logout_24"/>
    </group>
</menu>